<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="binding"
            type="com.example.videostreamingapp.bottomnavfragment.profile.Profile" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bottomnavfragment.profile.Profile">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/teal_200"
            android:theme="@style/Theme.Fbgmail.ToolBarStyle"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1F1F1"
            android:layout_below="@+id/toolbar">
            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal_200"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_profile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:elevation="8dp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_u_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/user_name"
                            android:layout_marginTop="2dp"
                            android:background="@null"
                            android:drawablePadding="4dp"
                            android:layout_centerHorizontal="true"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text2" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_curve"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                      android:layout_margin="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/mini3"
                                android:layout_marginBottom="@dimen/mini3"
                                android:text="@string/account"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text3" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/message_background"
                                android:padding="8dp">

                                <TextView
                                    android:id="@+id/email"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_email_24"
                                    android:drawableEnd="@drawable/ic_baseline_check_circle_24"
                                    android:drawablePadding="@dimen/mini4"
                                    android:textColor="@color/text_input_box_stroke"
                                    android:textSize="@dimen/text2" />

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        android:layout_margin="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/mini3"
                                android:layout_marginBottom="@dimen/mini3"
                                android:text="@string/help"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text3" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/message_background"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:id="@+id/tutorial"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_videocam_24"
                                    android:drawablePadding="@dimen/mini4"
                                    android:text="@string/watch_tutorial"
                                    android:layout_marginBottom="@dimen/mini5"
                                    android:textColor="@color/text_input_box_stroke"
                                    android:textSize="@dimen/text2" />

                                <TextView
                                    android:id="@+id/suggestions"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_settings_suggest_24"
                                    android:drawablePadding="@dimen/mini4"
                                    android:text="@string/suggestion"
                                    android:layout_marginBottom="@dimen/mini5"
                                    android:textColor="@color/text_input_box_stroke"
                                    android:textSize="@dimen/text2" />

                                <TextView
                                    android:id="@+id/contactUs"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_contact_support_24"
                                    android:drawablePadding="@dimen/mini4"
                                    android:text="@string/contact_us"
                                    android:textColor="@color/text_input_box_stroke"
                                    android:textSize="@dimen/text2" />

                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        android:layout_margin="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/mini3"
                                android:layout_marginBottom="@dimen/mini3"
                                android:text="@string/about"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text3" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/message_background"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:padding="16dp">

                                <ImageView
                                    android:id="@+id/facebook"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:contentDescription="@string/error"
                                    android:padding="@dimen/elevation"
                                    android:src="@drawable/facebook" />

                                <ImageView
                                    android:id="@+id/instagram"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:contentDescription="@string/error"
                                    android:padding="@dimen/elevation"
                                    android:src="@drawable/instagram" />


                                <ImageView
                                    android:id="@+id/twitter"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:contentDescription="@string/error"
                                    android:padding="@dimen/elevation"
                                    android:src="@drawable/twitter_logo" />

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        android:layout_margin="8dp"
                        android:layout_marginBottom="50dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/mini3"
                                android:layout_marginBottom="@dimen/mini3"
                                android:text="@string/logout"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text3" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/message_background"
                                android:padding="8dp">

                                <TextView
                                    android:id="@+id/logout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_logout_24"
                                    android:drawablePadding="@dimen/mini4"
                                    android:text="@string/logout"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/text2"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>
</layout>